add map. all operations on the map

--- a/style/app.css
+++ b/style/app.css
@@ -409,4 +409,8 @@ button, .button {
   user-select: none;
   pointer-events: none; }
 
+#map {
+  height: 400px;
+  width: 100%; }
+
 /*# sourceMappingURL=app.css.map */
